[GenAI] Add support for org.apache.sshd:sshd-sftp:2.18.0 using gpt-5.6-terra (#9992)
* Scaffold org.apache.sshd:sshd-sftp:2.18.0

* Checkpoint generated tests for org.apache.sshd:sshd-sftp:2.18.0 (1)

* Checkpoint generated tests for org.apache.sshd:sshd-sftp:2.18.0 (2)

* Checkpoint generated tests for org.apache.sshd:sshd-sftp:2.18.0 (3)

* Issue-requested metadata coverage for org.apache.sshd:sshd-sftp:2.18.0

* Update generated library support for org.apache.sshd:sshd-sftp:2.18.0

* Add support for org.apache.sshd:sshd-sftp:2.18.0

* Record pre-push review finding for org.apache.sshd:sshd-sftp:2.18.0

* Add Forge publication descriptor

* Replace build-time init flag with future-defaults option

---------

Co-authored-by: Mihailo Markovic <mihailo.markovic@oracle.com>
Co-authored-by: Mihailo Markovic <96449436+kimeta@users.noreply.github.com>